@@ -30,6 +30,9 @@ Release 0.23.6 - UNRELEASED
     YARN-223. Change processTree interface to work better with native code
     (Radim Kolar via tgraves)
 
+    YARN-280. RM does not reject app submission with invalid tokens 
+    (Daryn Sharp via tgraves)
+
 Release 0.23.5 - UNRELEASED
 
   INCOMPATIBLE CHANGES
